# autoclust

./: .gitignore  AlgorithmTesting.py  Cargo.toml  README.md
Data/Artificial/: 0.arff  1.arff  3.arff  4.arff  5.arff  6.arff  7.arff  8.arff  9.arff
Data/RealWorld/: philadelphia-crime.csv  slovenia-illegal-dumpsites.csv  slovenia-traffic-accidents-2016-events.csv
autoclust/: 2.arff  Cargo.toml  Manifest.ini  a.arff  data.arff  plik.py  setup.py  test.py
autoclust/autoclust/: __init__.py
autoclust/src/: edge.rs  lib.rs  main.rs
autoclust_test/: Cargo.toml
autoclust_test/src/: main.rs
src/: edge.rs  lib.rs
