[package]
name = "autoclust"
version = "0.1.0"
authors = ["Adam Grabski <adam.gr@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delaunator = "0.2.0"
itertools = "0.9.0"
collect_slice = "^1.2.0"
filters = "0.4.0"
adjacent-pair-iterator = "0.1.2"
[dependencies.pyo3]
version = "0.13.0"
features = ["extension-module"]
[lib]
crate-type = ["cdylib"]
[features]
default = ["pyo3/extension-module"]